2011-04-13  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/functions_pchart.php
	include/graphs/functions_fsgraph.php
	include/graphs/functions_gd.php
	include/graphs/fgraph.php: Fixed long index bug into
	stacked and line graphs.
	Add entry for radar and polar charts (kiviat)
	Clean code

2011-04-12 Miguel de Dios  <miguel.dedios@artica.es>

	* include/graphs/functions_fsgraph.php: fixed the "fs_area_graph" when
	haven't $long_index.

2011-04-12 Javier Lanz <javier.lanz@artica.es>

	* include/functions_reporting.php: Fixed the functionality for the sla
	horitontal bar graph. Truncated some agent and module names. Cleaned the
	 code style
	* include/ajax/reporting.ajax.php: Added functionality to add & delete
	elements from the global reports
	* include/functions_ui.php: Added function printSmallFont
	* godmode/reporting/reporting_builder.item_editor.php: Fixed a wee
	problem with the module combo size

2011-04-12 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* extensions/users_connected.php
	operation/incidents/incident.list.php
	godmode/agentes/module_manager.php: Fixed some mistakes of my last 
	commit. 

2011-04-12 Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_graph.php: added constants for some graphs. Added
	function "graphic_agentaccess2" and function "graph_event_module2".
	 
	* include/graphs/functions_pchart.php: added checked previous $color and
	$legend to avoid PHP warnings, added some code to calculate the bottom
	margin.
	
	* include/graphs/fgraph.php: at the moment in this file call
	"fs_3d_pie_chart2" instead "fs_3d_pie_chart". Erased the color and legend in
	the piegraph. 
	
	* operation/agentes/estado_generalagente.php: use new graphics functions.

2011-04-12  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/functions_fsgraph.php
	include/graphs/fgraph.php
	include/graphs/functions_utils.php: Created a function to 
	include flash charts javascript file into abstraction.
	Clean code
